--- a/mission/css/style.css
+++ b/mission/css/style.css
@@ -145,15 +145,22 @@ ul {
 }
 
 .intro__icon {
-  width: 80px;
-  height: 80px;
+  width: 128px;
+  height: 128px;
   margin: 0 auto var(--space-6);
   background: var(--gradient-primary);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
+  padding: 4px;
+}
+
+.intro__icon img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .intro__title {
