--- a/mission/css/timetable.css
+++ b/mission/css/timetable.css
@@ -73,7 +73,9 @@
   border: 2px solid #333;
   border-radius: 16px;
   cursor: pointer;
-  transition: all 0.2s ease;
+  transition:
+    background 0.1s ease,
+    border-color 0.1s ease;
   -webkit-border-radius: 16px;
   overflow: hidden;
 }
