--- a/mission/css/group.css
+++ b/mission/css/group.css
@@ -272,12 +272,20 @@
 
 .group-loading {
   display: none;
-  text-align: center;
-  padding: var(--space-6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .group-loading--visible {
-  display: block;
+  display: flex;
 }
 
 .group-loading__spinner {
